--- a/todo_board/templates/auth/login.html
+++ b/todo_board/templates/auth/login.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
 </head>
 <body>
-
+    <h1>Login</h1>
+    <form method="post">
+     <div class="form-group">
+            <label for="username">ID</label>
+            <input type="text" class="form-control" name="username" id="username"
+                   value="{{ form.username.data or '' }}">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password" id="password"
+                   value="{{ form.password.data or '' }}">
+        </div>
+        <button type="submit" class="btn btn-primary">로그인</button>
+    </form>
+    <p>Don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up here</a>.</p>
 </body>
 </html>
