--- a/todo_board/templates/auth/signup.html
+++ b/todo_board/templates/auth/signup.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up</title>
 </head>
 <body>
-
+    <h1>Sign Up</h1>
+     <form method="post" class="post-form">
+        {{ form.csrf_token }}
+        <div class="form-group">
+            <label for="username">UserName</label>
+            <input type="text" class="form-control" name="username" id="username"
+                   value="{{ form.username.data|default('', true) }}">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password" id="password"
+                   value="{{ form.password.data|default('', true) }}">
+        </div>
+        <div class="form-group">
+            <label for="password_check">Password Check</label>
+            <input type="password" class="form-control" name="password_check" id="password_check"
+                   value="{{ form.password_check.data|default('', true) }}">
+        </div>
+        <button type="submit" class="btn btn-primary">생성하기</button>
+    </form>
+    <p>Already have an account? <a href="{{ url_for('auth.login') }}">Log in here</a>.</p>
 </body>
 </html>
