--- a/todo_board/templates/auth/signup.html
+++ b/todo_board/templates/auth/signup.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Sign Up</h1>
      <form method="post" class="post-form">
-        {{ form.csrf_token }}
+         {{ form.csrf_token }}
+         {% include "errors.html" %}
         <div class="form-group">
             <label for="username">UserName</label>
             <input type="text" class="form-control" name="username" id="username"
